Corrected error in volunteer section

--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,7 @@ hr {
 }
 
 /* Volunteer Section */
-#work-experience-section {
+#volunteer-section {
   width: 60%;
   height: auto;
   margin: 0 auto 100px auto;
